// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content component renders profile with avatar matches snapshot 1`] = `
<div>
  <Avatar$2
    image="https://avatar_url.com"
    onClick={[Function]}
    size="small"
  />
  <Menu$2
    anchorElement={null}
    onClose={[Function]}
    open={false}
  >
    <ButtonLink
      onClick={[Function]}
      to="profile/profile_id"
    >
      Profile
    </ButtonLink>
    <ButtonLink
      onClick={[Function]}
      to="/account"
    >
      Account
    </ButtonLink>
    <hr />
    <LogoutButton />
  </Menu$2>
</div>
`;

exports[`Content component renders profile without avatar matches snapshot 1`] = `
<div>
  <Avatar$2
    onClick={[Function]}
    size="small"
  />
  <Menu$2
    anchorElement={null}
    onClose={[Function]}
    open={false}
  >
    <ButtonLink
      onClick={[Function]}
      to="profile/profile_id"
    >
      Profile
    </ButtonLink>
    <ButtonLink
      onClick={[Function]}
      to="/account"
    >
      Account
    </ButtonLink>
    <hr />
    <LogoutButton />
  </Menu$2>
</div>
`;
